--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "server-start": "node server/server.js",
+    "mysql-reset": "mysql -u root < database/pluck.sql"
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
@@ -17,6 +19,7 @@
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
