--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
         "arrow-body-style": "off",
         "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
         "react/forbid-prop-types": "off",
-        "react/jsx-one-expression-per-line":"off"
+        "react/jsx-one-expression-per-line":"off",
+        "no-plusplus": "off"
     }
 }
