--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
         "react/forbid-prop-types": "off",
         "react/jsx-one-expression-per-line":"off",
         "no-plusplus": "off",
-        "react/no-array-index-key": "off"
+        "react/no-array-index-key": "off",
+        "global-require": "off"
     }
 }
