--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "expo": "~40.0.0",
+    "expo": "^40.0.0",
     "expo-status-bar": "~1.0.3",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
@@ -29,7 +29,9 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
-    "react-native-web": "~0.13.12"
+    "react-native-svg": "^12.1.0",
+    "react-native-web": "~0.13.12",
+    "victory-native": "^35.3.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
